--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="Author" content="Archira">
-    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7, IE=9">
-    <title>Light</title>
-    <style type="text/css" media="screen">
-      *{margin:0;padding:0;font:inherit;color:inherit}
-      .box{margin:40px;}
-      .g{font:normal normal bold 66px/normal arial;color:#6c6c6c}
-    </style>
-  </head>
-  <body>
-    <div class=box>
-      <div class=g>Hangzhou</div>
-      <div class=g>China</div>
-    </div>
-  </body>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="Author" content="dczign" />
+	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7, IE=9" />
+	<title>dczign</title>
+  <style type="text/css" media="screen">
+    body{margin:0;padding:0;height:100%;background:#f7f7f7;}
+    a{text-decoration:none;color:inherit;font:inherit;cursor:pointer}
+    li{list-style:none;margin-right:20px;display:inline-block;font:11px/25px 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, Arial, Verdana, sans-serif;cursor:pointer;}
+    li:hover{color:white}
+  </style>
+</head>
+<body>
+<div style="border-top:2px solid #ebebeb;height:25px;background:#222;min-width:800px;">
+  <ol style="font:10px/12px arial;color:#c7c7c7;margin:0;padding:0 0 0 20px;"><li style='padding:0 20px;font-size:12px;color:#fff;margin-right:40px;'>dczign</li><li>Products</li><li>Company</li><li>Support</li></ol>
+  <div style="margin-left:110px;background:rgba(255,255,255,0.13);height:25px;margin-top:-25px;"></div>
+</div>
+<center>
+  <div style="height:70px">
+    <div style="margin-top:180px;font:12px/20px 'Lucida Grande', Arial, sans-serif;color:#585858;background:#ebebeb;width:280px;padding:5px 10px;border-radius:7px;"><span style="font-size:18px;">Weibr</span>, A different experience of Sina Weibo.</div>
+  </div>
+  <div style='width:180px;height:70px;background:rgba(0,0,0,0.1);-webkit-transform:perspective(500) rotateX(45deg);border-bottom:2px solid #aaa'></div>
+  <div style="width:150px;height:164px;margin-top:-90px;">
+    <div style='display:inline-block'><a target=_blank href='http://itunes.apple.com/us/app/weibr/id461272066?mt=12'><img src="/images/weibr.png" style='width:64px;height:64px;'></a><div style='background:url(/images/weibrR.png);height:28px;width:64px;opacity:0.15;margin-top:-16px;'></div></div>
+  </div>
+</center>
 </html>
