--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="Author" content="dczign" />
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7, IE=9" />
+  <link rel="shortcut icon" href="/images/favicon.ico">
 	<title>dczign</title>
   <style type="text/css" media="screen">
     body{margin:0;padding:0;height:100%;background:#f7f7f7;}
     a{text-decoration:none;color:inherit;font:inherit;cursor:pointer}
-    li{list-style:none;margin-right:20px;display:inline-block;font:11px/25px 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, Arial, Verdana, sans-serif;cursor:pointer;}
-    li:hover{color:white}
+    li{list-style:none;margin-right:20px;display:inline-block;font:11px/25px 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, Arial, Verdana, sans-serif;}
+    .hot a:hover{color:white}
+    .fonted{font:11px/25px 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, Arial, Verdana, sans-serif;`}
   </style>
 </head>
 <body>
 <div style="border-top:2px solid #ebebeb;height:25px;background:#222;min-width:800px;">
   <ol style="font:10px/12px arial;color:#c7c7c7;margin:0;padding:0 0 0 20px;"><li style='padding:0 20px;font-size:12px;color:#fff;margin-right:40px;'>dczign</li><li>Products</li><li>Company</li><li>Support</li></ol>
-  <div style="margin-left:110px;background:rgba(255,255,255,0.13);height:25px;margin-top:-25px;"></div>
+  <div style="margin-left:110px;background:rgba(255,255,255,0.13);height:25px;margin-top:-25px;text-align:right;color:#999;padding-right:10px;" class='fonted hot'><a target=_blank href='http://twitter.com/dczign'>FOLLOW</a></div>
 </div>
 <center>
   <div style="height:70px">
