--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div style="border-top:2px solid #ebebeb;height:25px;background:#222;min-width:800px;">
-  <ol style="font:10px/12px arial;color:#c7c7c7;margin:0;padding:0 0 0 20px;"><li style='padding:0 20px;font-size:12px;color:#fff;margin-right:40px;'>dczign</li><li>Products</li><li>Company</li><li>Support</li></ol>
+  <ol style="font:10px/12px arial;color:#c7c7c7;margin:0;padding:0 0 0 20px;"><li style='padding:0 20px;font-size:12px;color:#fff;margin-right:40px;'>dczign</li><li>Products</li><li>Solutions</li><li>Newswire</li><li>Downloads</li><li>Support</li></ol>
   <div style="margin-left:110px;background:rgba(255,255,255,0.13);height:25px;margin-top:-25px;text-align:right;color:#999;padding-right:10px;" class='fonted hot'><a target=_blank href='http://twitter.com/dczign'>FOLLOW</a></div>
 </div>
 <center>
