--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <center>
   <div style="height:70px">
     <div id='w1' style="margin-top:180px;font:12px/20px 'Lucida Grande', Arial, sans-serif;color:#585858;background:#ebebeb;width:330px;padding:5px 10px;border-radius:7px;"><span style="font-size:18px;">Historian</span>, create your own history and learn from it.</div>
-    <div id='w2' style="display:none;margin-top:180px;font:12px/20px 'Lucida Grande', Arial, sans-serif;color:#585858;background:#ebebeb;width:280px;padding:5px 10px;border-radius:7px;"><span style="font-size:18px;">Weibr</span>, A different experience of Sina Weibo.</div>
+    <div id='w2' style="display:none;margin-top:180px;font:12px/20px 'Lucida Grande', Arial, sans-serif;color:#585858;background:#ebebeb;width:280px;padding:5px 10px;border-radius:7px;"><span style="font-size:18px;">Weibr</span>, a different experience of Sina Weibo.</div>
   </div>
   <div style='width:220px;height:70px;background:rgba(0,0,0,0.1);-webkit-transform:perspective(500) rotateX(45deg);border-bottom:2px solid #aaa'></div>
   <div style="width:150px;height:164px;margin-top:-90px;-webkit-transform:translate3d(0,0,0);">
